[metadata]
name=latticemc
version=0.1
author=Karol Trojanowski
author_email=trojanowski.ifuj@gmail.com
license=MIT
keywords=lattice monte carlo biaxial nematic chirality
install_requires=
    numpy >= 1.18.0
    numba >= 0.49.0
    scipy >= 1.5.0
tests_require=
    pytest
    pytest-dotenv
    pytest-pythonpath

[tool:pytest]
env_files=
    .test.env
python_paths=
    .

[flake8]
max-line-length=160

[autopep8]
max-line-length=160

[isort]
known_first_party=latticemc
