[metadata]
name=latticemc
version=0.1
author=Karol Trojanowski
author_email=trojanowski.ifuj@gmail.com
license=MIT
keywords=lattice monte carlo biaxial nematic chirality
install_requires=
    nptyping >= 1.3.0
    numba >= 0.49.0
    numpy >= 1.18.0
    scipy >= 1.5.0
tests_require=
    pytest-dotenv >= 0.5.2
    pytest-pythonpath >= 0.7.3
    pytest >= 6.1.2
    flake8 >= 3.8.4
    mypy >= 0.790


[tool:pytest]
env_files=
    .test.env
python_paths=
    .

[flake8]
max-line-length=160

[autopep8]
max-line-length=160

[isort]
known_first_party=latticemc
