[metadata]
name = latticemc
version = 0.1.3
author = Karol Trojanowski
author_email = trojanowski.ifuj@gmail.com
description = Simulations of lattice symmetry models of liquid crystals
license = MIT
long_description = file: README.md
keywords = lattice monte carlo biaxial nematic chirality
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX
    License :: MIT

[options]
python_requires = >= 3.7, <4
install_requires =
    nptyping >= 1.4.0
    numba >= 0.49.0
    numpy >= 1.18.0
    scipy >= 1.5.0
    
[options.extras_require]
tests=
    pytest >= 6.1.2
    flake8 >= 3.8.4
    flake8-docstrings >= 1.5.0
    flake8-isort >= 4.0.0
    mypy >= 0.790

[tool:pytest]
addopts = --doctest-modules --doctest-continue-on-failure -rs
testpaths = latticemc tests

[flake8]
max-line-length = 160
docstring-convention = numpy
ignore =
    W504
    D104
    D105
per-file-ignores =
    tests/**: D,N

[isort]
line_length = 160
known_first_party = latticemc

[mypy]
ignore_missing_imports = true
